// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/🚫 PageHero has breadcrumb 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": "calc(100vw - 6rem)",
      }
    }
  >
    <div
      className="PageHero__StyledPageHero-sc-1k4oefb-0 jZTvNr"
      data-testid="page-hero"
    >
      <div>
        breadcrumb/mybread
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/🚫 PageHero has left content 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": "calc(100vw - 6rem)",
      }
    }
  >
    <div
      className="PageHero__StyledPageHero-sc-1k4oefb-0 jZTvNr"
      data-testid="page-hero"
    >
      <div
        className="PageHero__StyledLeftContent-sc-1k4oefb-5 nKrTg"
      >
        <div>
          Left Content
        </div>
      </div>
      <div
        className="PageHero__StyledTitle-sc-1k4oefb-3 dijkPK"
      >
        <div
          className="PageTitle__StyledPageTitle-sc-1x4wg61-0 MhXQw"
          data-testid="page-hero-page-title"
        >
          <h1
            className="PageTitle__StyledPageTitleH1-sc-1x4wg61-2 lewdXK"
          >
            Your Devices
          </h1>
        </div>
        <div
          className="PageHero__StyledPageHeroWrap-sc-1k4oefb-1 dymYXa"
        >
          <p
            className="PageHero__StyledPageBlurb-sc-1k4oefb-2 hRNCsX"
            data-testid="page-hero-page-blurb"
          >
            Your data lake displays a detailed view of the entity types that are connected in Watson IoT Platform. To explore the metrics and dimensions of your entities in more detail, select Entities. To start applying calculations and analyzing your entity data, select Data.
          </p>
        </div>
      </div>
      <div
        className="PageHero__StyledRightContent-sc-1k4oefb-4 jzJCmH"
      >
        <div
          style={
            Object {
              "textAlign": "right",
            }
          }
        >
          Right Content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/🚫 PageHero normal 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": "calc(100vw - 6rem)",
      }
    }
  >
    <div
      className="PageHero__StyledPageHero-sc-1k4oefb-0 jZTvNr"
      data-testid="page-hero"
    >
      <div
        className="PageHero__StyledTitle-sc-1k4oefb-3 dijkPK"
      >
        <div
          className="PageTitle__StyledPageTitle-sc-1x4wg61-0 MhXQw"
          data-testid="page-hero-page-title"
        >
          <h1
            className="PageTitle__StyledPageTitleH1-sc-1x4wg61-2 lewdXK"
          >
            Your Devices
          </h1>
        </div>
        <div
          className="PageHero__StyledPageHeroWrap-sc-1k4oefb-1 dymYXa"
        >
          <p
            className="PageHero__StyledPageBlurb-sc-1k4oefb-2 hRNCsX"
            data-testid="page-hero-page-blurb"
          >
            Your data lake displays a detailed view of the entity types that are connected in Watson IoT Platform. To explore the metrics and dimensions of your entities in more detail, select Entities. To start applying calculations and analyzing your entity data, select Data.
          </p>
        </div>
      </div>
      <div
        className="PageHero__StyledRightContent-sc-1k4oefb-4 jzJCmH"
      >
        <div
          style={
            Object {
              "textAlign": "right",
            }
          }
        >
          Right Content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/🚫 PageHero normal with content switcher 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": "calc(100vw - 6rem)",
      }
    }
  >
    <div
      className="PageHero__StyledPageHero-sc-1k4oefb-0 jZTvNr"
      data-testid="page-hero"
    >
      <div
        className="PageHero__StyledTitle-sc-1k4oefb-3 dijkPK"
      >
        <div
          className="PageTitle__StyledPageTitle-sc-1x4wg61-0 MhXQw"
          data-testid="page-hero-page-title"
        >
          <h1
            className="PageTitle__StyledPageTitleH1-sc-1x4wg61-2 lewdXK"
          >
            Your Devices
          </h1>
        </div>
        <div
          className="bx--content-switcher PageSwitcher__StyledContentSwitcher-sc-1dcz28n-0 jasjRR"
          data-testid="page-hero-page-switcher"
          onChange={[Function]}
          role="tablist"
        >
          <button
            aria-selected={false}
            className="bx--content-switcher-btn"
            data-testid="page-hero-page-switcher-switch-allDevices"
            data-tip="All Devices"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex="-1"
            type="button"
          >
            <span
              className="bx--content-switcher__label"
              title="All Devices"
            >
              All Devices
            </span>
          </button>
          <button
            aria-selected={true}
            className="bx--content-switcher-btn bx--content-switcher--selected"
            data-testid="page-hero-page-switcher-switch-diagnose"
            data-tip="Diagnose"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="tab"
            tabIndex="0"
            type="button"
          >
            <span
              className="bx--content-switcher__label"
              title="Diagnose"
            >
              Diagnose
            </span>
          </button>
        </div>
        <div
          className="PageHero__StyledPageHeroWrap-sc-1k4oefb-1 dymYXa"
        >
          <p
            className="PageHero__StyledPageBlurb-sc-1k4oefb-2 hRNCsX"
            data-testid="page-hero-page-blurb"
          >
            Your data lake displays a detailed view of the entity types that are connected in Watson IoT Platform. To explore the metrics and dimensions of your entities in more detail, select Entities. To start applying calculations and analyzing your entity data, select Data.
          </p>
        </div>
      </div>
      <div
        className="PageHero__StyledRightContent-sc-1k4oefb-4 jzJCmH"
      >
        <div
          style={
            Object {
              "textAlign": "right",
            }
          }
        >
          Right Content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/🚫 PageHero with section 1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": "calc(100vw - 6rem)",
      }
    }
  >
    <div
      className="PageHero__StyledPageHero-sc-1k4oefb-0 jZTvNr"
      data-testid="page-hero"
    >
      <div
        className="PageHero__StyledTitle-sc-1k4oefb-3 dijkPK"
      >
        <div
          className="PageTitle__StyledPageTitle-sc-1x4wg61-0 MhXQw"
          data-testid="page-hero-page-title"
        >
          <h1
            className="PageTitle__StyledPageTitleH1-sc-1x4wg61-2 lewdXK"
          >
            <span
              className="PageTitle__StyledPageSection-sc-1x4wg61-1 dUHWaW"
            >
              Explore /
            </span>
            Your Devices
          </h1>
        </div>
        <div
          className="PageHero__StyledPageHeroWrap-sc-1k4oefb-1 dymYXa"
        >
          <p
            className="PageHero__StyledPageBlurb-sc-1k4oefb-2 hRNCsX"
            data-testid="page-hero-page-blurb"
          >
            Your data lake displays a detailed view of the entity types that are connected in Watson IoT Platform. To explore the metrics and dimensions of your entities in more detail, select Entities. To start applying calculations and analyzing your entity data, select Data.
          </p>
        </div>
      </div>
      <div
        className="PageHero__StyledRightContent-sc-1k4oefb-4 jzJCmH"
      >
        <div
          style={
            Object {
              "textAlign": "right",
            }
          }
        >
          Right Content
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/🚫 PageHero ️⛔ Deprecation Notice  1`] = `
<div
  className="storybook-container"
>
  <div
    style={
      Object {
        "width": "calc(100vw - 6rem)",
      }
    }
  >
    <div
      className="bx--toast-notification bx--toast-notification--warning"
      kind="warning"
      role="alert"
      style={
        Object {
          "marginBottom": "0.5rem",
          "minWidth": "30rem",
        }
      }
    >
      <svg
        aria-hidden={true}
        className="bx--toast-notification__icon"
        fill="currentColor"
        focusable="false"
        height={20}
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 20 20"
        width={20}
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10,1c-5,0-9,4-9,9s4,9,9,9s9-4,9-9S15,1,10,1z M9.2,5h1.5v7H9.2V5z M10,16c-0.6,0-1-0.4-1-1s0.4-1,1-1	s1,0.4,1,1S10.6,16,10,16z"
        />
        <path
          d="M9.2,5h1.5v7H9.2V5z M10,16c-0.6,0-1-0.4-1-1s0.4-1,1-1s1,0.4,1,1S10.6,16,10,16z"
          data-icon-path="inner-path"
          opacity="0"
        />
        <title>
          warning icon
        </title>
      </svg>
      <div
        className="bx--toast-notification__details"
      >
        <h3
          className="bx--toast-notification__title"
        >
          Deprecation Notice
        </h3>
        <div
          className="bx--toast-notification__subtitle"
        >
          PageHero has been deprecated and will be removed in the next major version of carbon-addons-iot-react.
        </div>
        <div
          className="bx--toast-notification__caption"
        >
          Refactor usages of PageHero to use Hero instead.
        </div>
      </div>
    </div>
  </div>
</div>
`;
